--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-04 22:32+0300\n"
+"POT-Creation-Date: 2022-10-20 14:04+0300\n"
 "PO-Revision-Date: 2022-10-04 23:57+0300\n"
 "Last-Translator: Timo Tuominen <timo.tuominen@kausal.tech>\n"
 "Language-Team: LANGUAGE <timo.tuominen@kausal.tech>\n"
@@ -916,6 +916,22 @@ msgid "If the format is \"Category\", choose which category type the attribute v
 msgstr "Jos muoto on \"luokka\", valitse minkä luokkatyypin luokkia voi valita ominaisuuden arvoiksi"
 
 #: actions/models/attributes.py
+msgid "show choice names"
+msgstr "näytä valintavaihtoehtojen otsikot"
+
+#: actions/models/attributes.py
+msgid "If the format is \"ordered choice\", determines whether the choice names are displayed"
+msgstr ""
+
+#: actions/models/attributes.py
+msgid "has zero option"
+msgstr "ensimmäinen vaihtoehto on nolla"
+
+#: actions/models/attributes.py
+msgid "If the format is \"ordered choice\", determines whether the first option is displayed with zero bullets instead of one"
+msgstr ""
+
+#: actions/models/attributes.py
 msgid "attribute type"
 msgstr "ominaisuustyyppi"
 
@@ -1703,6 +1719,10 @@ msgstr "käyttäjien palautteet"
 msgid "User feedbacks"
 msgstr "Käyttäjien palautteet"
 
+#: images/image_formats.py
+msgid "Full width (zoomable)"
+msgstr "Täysi leveys (suurennettava)"
+
 #: images/models.py
 msgid "Image byline or credits"
 msgstr "Kuvateksti tai tekijän tiedot"
@@ -2444,7 +2464,7 @@ msgid "Organizations"
 msgstr "Organisaatiot"
 
 #: orgs/forms.py
-msgid "A node cannot be its own parent."
+msgid "A node cannot be moved under itself in the hierarchy."
 msgstr "Organisaatio ei voi olla itsensä yläorganisaatio."
 
 #: orgs/models.py
